--- a/sample_rails_app/Gemfile
+++ b/sample_rails_app/Gemfile
@@ -26,9 +26,9 @@ gem 'sdoc', '~> 0.4.0',          group: :doc
 # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
 gem 'spring',        group: :development
 
-# Optimal Gems
+# Paysafe Gems
 gem 'bootstrap-sass', '~> 3.3.0'
-gem 'optimalpayments', path: "../"
+gem 'paysafe', path: "../"
 
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
